Finalised the layout and design of the website.\nAlso fixed a layout bug causing placement issues.

--- a/stock_shadower/src/components/Container/Container.css
+++ b/stock_shadower/src/components/Container/Container.css
@@ -2,8 +2,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   background: none;
   background-image: url("BG_holder.png");
@@ -11,26 +11,27 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 
-  z-index: 1;
 }
 
 .primus_in_primo{
   position: relative;
   width: 100%;
-  height: 140px;
+  height: 22%;
+
+  background: none;
   background: rgba(0, 0, 0, 0.85);
 
-  z-index: 2;
 }
 
 .secundo_in_primo{
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 945px;
+  height: 78%;
 
+  background: none;
   background: rgba(255, 255, 255, 0.75);
-  z-index: 2;
+  
 }
